# depos

./: .depos.cmake  .gitignore  CMakeLists.txt  README.md  depos.env.cmake  depos.project.cmake
.github/workflows/: ci.yml  provider-ci.yml
cli/: Cargo.toml  README.md
cli/src/: lib.rs  linux_provider.rs  main.rs
cli/tests/: cli_defaults.rs  integration.rs  portable_integration.rs
cmake/: DepoConfig.cmake  DepoConsumer.cmake  depos.cmake
depofiles/local/SG14/parsecheck/master/: main.DepoFile
depofiles/local/aegis/nametag/0.3.0/: main.DepoFile
depofiles/local/gxhash/nametag/3.4.1/: main.DepoFile
depofiles/local/itoa/nametag/main/: main.DepoFile
depofiles/local/libbpf/nametag/1.5.0/: main.DepoFile
depofiles/local/libcurl/parsecheck/8.8.0/: main.DepoFile
depofiles/local/libelf/nametag/0.194/: main.DepoFile
depofiles/local/libevent/parsecheck/2.1.12/: main.DepoFile
depofiles/local/libssh2/parsecheck/1.11.0/: main.DepoFile
depofiles/local/liburcu/nametag/0.10.3/: main.DepoFile
depofiles/local/liburing/nametag/2.9/: main.DepoFile
depofiles/local/local_itoa/main/: main.DepoFile
depofiles/local/local_itoa/release/main/: main.DepoFile
depofiles/local/lz4/parsecheck/1.10.0/: main.DepoFile
depofiles/local/mimalloc/parsecheck/3.0.1/: main.DepoFile
depofiles/local/nghttp2/nametag/1.64.0/: main.DepoFile
depofiles/local/openssl/parsecheck/3.4.1/: main.DepoFile
depofiles/local/picoquic/nametag/master/: main.DepoFile
depofiles/local/picotls/nametag/master/: main.DepoFile
depofiles/local/simdjson/parsecheck/4.2.4/: main.DepoFile
depofiles/local/static_type_info/parsecheck/master/: main.DepoFile
depofiles/local/tidesdb/parsecheck/8.6.2/: main.DepoFile
depofiles/local/zonedetect/nametag/master/: main.DepoFile
depofiles/local/zstd/nametag/1.5.7/: main.DepoFile
docs/: build-roots.md  cli.md  cmake.md  depofile.md  examples.md  getting-started.md
manifests/: local_itoa.cmake
tests/smoke/: CMakeLists.txt  main.cpp  manifest.cmake
tests/smoke/fixtures/local/bitsery/release/5.2.3/: main.DepoFile
tests/smoke/fixtures/local/itoa/release/main/: main.DepoFile
tools/: regenerate-local-depofiles.sh  release-gate.sh
